Agregando hoja de estilo

--- a/index.html
+++ b/index.html
@@ -1,12 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MediaCore</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+	<title>Mediacore</title>
 </head>
 <body>
-    
+	<header>
+		<h1>Mediacore</h1>
+		<nav>
+			<ul>
+				<li><a href="#about">Acerca de nosotros</a></li>
+				<li><a href="#services">Servicios</a></li>
+				<li><a href="#contact">Contacto</a></li>
+			</ul>
+		</nav>
+	</header>
+	
+	<main>
+		<section id="about">
+			<h2>Acerca de nosotros</h2>
+			<p>Mediacore es una empresa líder en el mercado de servicios de marketing digital. Ayudamos a empresas de todos los tamaños a aumentar su presencia en línea y atraer más clientes a través de una variedad de estrategias de marketing en línea.</p>
+		</section>
+		
+		<section id="services">
+			<h2>Servicios</h2>
+			<ul>
+				<li>Optimización de motores de búsqueda (SEO)</li>
+				<li>Publicidad en línea</li>
+				<li>Marketing en redes sociales</li>
+				<li>Marketing de contenidos</li>
+				<li>Email marketing</li>
+			</ul>
+		</section>
+		
+		<section id="contact">
+			<h2>Contacto</h2>
+			<p>¡Ponte en contacto con nosotros para obtener más información sobre cómo podemos ayudarte a hacer crecer tu negocio en línea!</p>
+			<p>Teléfono: 123-456-7890</p>
+			<p>Email: info@mediacore.com</p>
+		</section>
+	</main>
+	
+	<footer>
+		<p>Derechos reservados © 2023 Mediacore</p>
+	</footer>
 </body>
 </html>
