Cambios en quienes somos y arreglos en la hoja css

--- a/index.html
+++ b/index.html
@@ -19,17 +19,25 @@
 	<main>
 		<section id="about">
 			<h2>Acerca de nosotros</h2>
-			<p>Mediacore es una empresa líder en el mercado de servicios de marketing digital. Ayudamos a empresas de todos los tamaños a aumentar su presencia en línea y atraer más clientes a través de una variedad de estrategias de marketing en línea.</p>
+			<p> Es una empresa que se dedica a la distribución de contenido online y principalmente a el
+				marketing, administración y consultora digital a un mejor precio que sus competidores a
+				nivel nacional, en el cual se brindan planes y paquetes de diferentes precios según lo que
+				necesito el contratador, la problemática que queremos resolver es la accesibilidad que
+				tiene un usuario, autónomo o empresa de cualquier índole ya sea creada desde cero o ya
+				en funciones a su adaptación de manera profesional a el e-commerce, marketing o
+				solamente adaptarse a la vida online que es la manera mas accesible actualmente para
+				llegar a un usuario o a el publico objetivo.
+			</p>
 		</section>
 		
 		<section id="services">
 			<h2>Servicios</h2>
 			<ul>
-				<li>Optimización de motores de búsqueda (SEO)</li>
-				<li>Publicidad en línea</li>
-				<li>Marketing en redes sociales</li>
-				<li>Marketing de contenidos</li>
-				<li>Email marketing</li>
+				<li>Administracion</li>
+				<li>Marketing</li>
+				<li>Finanzas</li>
+				<li>Diseño</li>
+				<li>Records</li>
 			</ul>
 		</section>
 		
@@ -37,7 +45,7 @@
 			<h2>Contacto</h2>
 			<p>¡Ponte en contacto con nosotros para obtener más información sobre cómo podemos ayudarte a hacer crecer tu negocio en línea!</p>
 			<p>Teléfono: 123-456-7890</p>
-			<p>Email: info@mediacore.com</p>
+			<p>Email: admin@mediacore.network</p>
 		</section>
 	</main>
 	
